# c-sgx-sdk-playground

./: .gitmodules  CMakeLists.txt  README.md
benchmarking/: .gitignore  CMakeLists.txt  README.md
benchmarking-read-write/: CMakeLists.txt
benchmarking-read-write/enclave/: CMakeLists.txt  enclave.config.xml  enclave.cpp  enclave.edl  enclave.lds
benchmarking-read-write/non-sgx/: CMakeLists.txt  increment.cpp  read.cpp
benchmarking-read-write/sgx/: CMakeLists.txt  protected_read.cpp  protected_write.cpp  unprotected_read.cpp
benchmarking-read-write/utils/: errors.cpp  loader.cpp
benchmarking/app/: CMakeLists.txt  loader.hpp
benchmarking/cmake/: sgx.cmake
benchmarking/enclave/: CMakeLists.txt  aes.cpp  enclave.cpp  enclave.edl
benchmarking/testing/: CMakeLists.txt
benchmarking/testing/openssl/: CMakeLists.txt
benchmarking/testing/openssl/aes/: CMakeLists.txt  main.cpp
benchmarking/testing/openssl/sha256/: CMakeLists.txt  main.cpp
benchmarking/testing/sgx/: CMakeLists.txt
benchmarking/testing/sgx/aes/: CMakeLists.txt  main.cpp
benchmarking/testing/sgx/sha256/: CMakeLists.txt  main.cpp
hello-world/: CMakeLists.txt
hello-world/app/: CMakeLists.txt  errors.hpp  loader.hpp  main.cpp  ocalls.cpp  ocalls.hpp
hello-world/cmake/: sgx.cmake
hello-world/enclave/: enclave.cpp  enclave.edl
scripts/: play.sh
